# sna

./: CMakeLists.txt  README.md  resources.qrc
cmake/: generic-gcc-avr.cmake
firmware/: CMakeLists.txt  ad9850.c  ad9850.h  adc.c  adc.h  main.c  uart.c  uart.h
hardware/: buffer.asc  compact.brd  compact.sch  hardware.brd  hardware.sch  prg.brd  prg.sch  proper.brd  proper.sch  tiny.brd  tiny.sch
python/: sna.py
shared/: about.html
src/: CMakeLists.txt  aboutwidget.cc  aboutwidget.hh  abstracttask.cc  abstracttask.hh  livepanel.cc  livepanel.hh  logger.cc  logger.hh  main.cc  mainwindow.cc  mainwindow.hh  plot.cc  plot.hh  portdialog.cc  portdialog.hh  qcustomplot.cc  scanpanel.cc  scanpanel.hh  scantask.cc  scantask.hh  sna.cc  sna.hh
